Opened 16 years ago
Closed 16 years ago
#4141 closed bug (fixed)
Incorrect error returned when creating symlinks on a filesystem that does not support them
Reported by: | VinDuv | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev31843. When trying to create a symlink on a filesystem that does not support them (i.e. the fs_create_symlink hook is NULL), EROFS is returned. It should probably return B_UNSUPPORTED instead.
/fatfs> ln -s somefile somelink ln: creating symbolic link `somelink': Read-only file system
http://dev.haiku-os.org/browser/haiku/trunk/src/system/kernel/fs/vfs.cpp#L5944
Change History (2)
comment:1 by , 16 years ago
Component: | - General → File Systems |
---|
comment:2 by , 16 years ago
Component: | File Systems → System/Kernel |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev32004.
Note:
See TracTickets
for help on using tickets.
Sorry, forgot to set the component.