* Creating a symlink now fails with B_NOT_SUPPORTED instead of   B_READ_ONLY_DEVICE if it has a write hook. * This fixes bug #4141.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32004 a95241bf-73f2-0310-859d-f6bbb57e9c96